--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -8,8 +8,8 @@
     <%= form_tag(prison_overrides_path(@prison.code), method: :post, id: "override_form")  do %>
 
       <h1 class="govuk-heading-xl govuk-!-margin-top-4">
-        <%= "Why are you allocating a probation officer POM?" if @prisoner.recommended_pom_type == 'Prison officer' %>
-        <%= "Why are you allocating a prison officer POM?" if @prisoner.recommended_pom_type == 'Probation officer' %>
+        <%= "Why are you allocating a probation officer POM?" if @prisoner.recommended_pom_type == RecommendationService::PRISON_POM %>
+        <%= "Why are you allocating a prison officer POM?" if @prisoner.recommended_pom_type == RecommendationService::PROBATION_POM %>
       </h1>
       <div class='govuk-!-margin-top-4'>
         <div class="govuk-form-group <% if @override.errors[:override_reasons].present? %>govuk-form-group--error<% end %>">
@@ -45,7 +45,7 @@
               </div>
               <div class="govuk-checkboxes__item">
                 <%= check_box_tag("override[override_reasons][]", "no_staff", override_reason_contains(@override, 'no_staff'), id: "override-2", class: "govuk-checkboxes__input") %>
-                <%= label_tag "override[override_reasons][]", "No available #{@prisoner.recommended_pom_type.downcase} POMs", class: 'govuk-label govuk-checkboxes__label' %>
+                <%= label_tag "override[override_reasons][]", "No available #{@prisoner.recommended_pom_type_label.downcase} POMs", class: 'govuk-label govuk-checkboxes__label' %>
               </div>
               <div class="govuk-checkboxes__item">
                 <%= check_box_tag("override[override_reasons][]", "continuity", override_reason_contains(@override, 'continuity'), id: "override-3", class: "govuk-checkboxes__input") %>
