refactored summary service to just produce organise offenders into 3 buckets

--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -13,7 +13,7 @@
   <%= render(
           :partial => 'shared/pagination',
           :locals => {
-              :data => @summary.offenders,
+              :data => @offenders,
           }) %>
 
   <table class="govuk-table responsive tablesorter">
@@ -38,7 +38,7 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @summary.offenders.each_with_index do |offender, i| %>
+    <% @offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row allocated_offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell"><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
@@ -58,7 +58,7 @@
   <%= render(
           :partial => 'shared/pagination',
           :locals => {
-              :data => @summary.offenders,
+              :data => @offenders,
           }) %>
 
 </section>
