put back half of the feedback feature test

--- a/app/views/summary/new_arrivals.html.erb
+++ b/app/views/summary/new_arrivals.html.erb
@@ -20,7 +20,7 @@
   <%= render(
           :partial => 'shared/pagination',
           :locals => {
-              :data => @summary.offenders,
+              :data => @offenders,
           }) %>
 
   <table class="govuk-table responsive tablesorter">
@@ -50,7 +50,7 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @summary.offenders.each_with_index do |offender, i| %>
+    <% @offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell ">
           <%= offender.full_name %>
@@ -77,7 +77,7 @@
   <%= render(
           :partial => 'shared/pagination',
           :locals => {
-              :data => @summary.offenders,
+              :data => @offenders,
           }) %>
 
 </section>
