Pom 450 new arrivals (#976)
* Show 'new arrivals' in summary

As per POM-450 this PR adds a new summary type (:new_arrivals) to the
summary, which is "offenders that would be in missing information if
they have been waiting more than 2 days".  To achieve this means we need
to include the arrival date for all offenders in all summary_types so
that we can calculate totals. This is not ideal.

* Remove unnecessary test

* Clarify the time period for newly arrived

* put back breadcrumbs

* fix to only return new arrivals if they are <= 2 days, as by the time 2 days has elapsed (e.g. they arrive on Monday, and its now Wednesday) nDelius matching should have happened.

* improve test slightly

* improve test, added comment about tier presence implying case information presence

* improved tests

* tidied up Summary class - remove writers

* put back half of the feedback feature test

* tidy up template

* fixed bug with offenders arriving on Fridays

* fixed bug where saturday offender not counted as new arrival on Monday

* appease the linter

* Finish resolving issues related to rebasing master

* Implement 'travel_to' helper method in summary_controller_spec to try and get tests passing again

* WIP better time travel in specs

* Add specs for 'new arrivals' w/longform mocks

This commit pulls out the 'new arrivals' cases and cuts them off
from the heavy mocks used in the rest of the spec.

There's some classes that mock out things in the application already,
but as a naive reader they seem to be causing unusual behaviour, so
these specs were built up one webmock at a time to help them mock the
minimal set of data needed for this feature.

This commit introduces an empty (and ignored) spec for movements,
which may or may not be part of the previously built feature on this
branch. This can be worked on in a different commit.

Notably, there is a lot of duplication in these specs that needs
addressing.

* Bust cac

--- a/app/views/summary/new_arrivals.html.erb
+++ b/app/views/summary/new_arrivals.html.erb
@@ -6,10 +6,17 @@
   <%= render "search/search_box" %>
 </div>
 
-<%= render(:partial => 'summary_subnav', :locals => {:active => :allocated}) %>
-<h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Allocations</h1>
+<%= render(:partial => 'summary_subnav', :locals => {:active => :new_arrivals}) %>
 
-<section id="allocated">
+<h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Newly arrived</h1>
+<p>
+  Case information for these prisoners will be matched with nDelius records in the
+  next 24-48 hours. If case information is matched successfully you will be able to
+  allocate a POM. If not, the case will move to 'Add missing information’ for you
+  to update first.
+</p>
+
+<section id="awaiting-allocation">
   <%= render(
           :partial => 'shared/pagination',
           :locals => {
@@ -26,33 +33,40 @@
         <%= sort_arrow('last_name') %>
       </th>
       <th class="govuk-table__header sorter-false" scope="col">
+        <a href="<%= sort_link('prison_arrival_date') %>">
+          Arrival date
+        </a>
+        <%= sort_arrow('prison_arrival_date') %>
+      </th>
+      <th class="govuk-table__header sorter-false" xscope="col">
         <a href="<%= sort_link('earliest_release_date') %>">
           Earliest release date
         </a>
         <%= sort_arrow('earliest_release_date') %>
       </th>
-      <th class="govuk-table__header" scope="col">POM</th>
-      <th class="govuk-table__header" scope="col">Allocation date</th>
-      <th class="govuk-table__header sorter-false" scope="col">Action</th>
+      <th class="govuk-table__header sorter-false" scope="col">
+        Matching with nDelius scheduled for
+      </th>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
     <% @offenders.each_with_index do |offender, i| %>
-      <tr class="govuk-table__row allocated_offender_row_<%= i %>">
-        <td aria-label="Prisoner" class="govuk-table__cell">
+      <tr class="govuk-table__row offender_row_<%= i %>">
+        <td aria-label="Prisoner name" class="govuk-table__cell ">
           <%= offender.full_name %>
           <br/>
           <span class='govuk-hint govuk-!-margin-bottom-0'>
             <%= offender.offender_no %>
           </span>
         </td>
-        <td aria-label="Release date" class="govuk-table__cell">
+        <td aria-label="Arrival date" class="govuk-table__cell">
+          <%= format_date(offender.prison_arrival_date) %>
+        </td>
+        <td aria-label="Earliest release<br/>date" class="govuk-table__cell">
           <%= format_date(offender.earliest_release_date) %>
         </td>
-        <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name %></td>
-        <td aria-label="Allocation date" class="govuk-table__cell"><%= format_date(offender.allocation_date) %></td>
-        <td aria-label="Action" class="govuk-table__cell ">
-          <%= link_to "View", prison_allocation_path(@prison.code, nomis_offender_id: offender.offender_no, sort: params[:sort], page: params[:page] || 1) %>
+        <td aria-label="Matching with nDelius scheduled for" class="govuk-table__cell">
+          <%= delius_schedule_for(offender.prison_arrival_date) %>, 9:15PM
         </td>
       </tr>
     <% end %>
@@ -66,4 +80,3 @@
           }) %>
 
 </section>
-
