--- a/app/views/allocations/new.html.erb
+++ b/app/views/allocations/new.html.erb
@@ -1,5 +1,17 @@
 <%= link_to "Back", 'javascript:history.back()', class: "govuk-back-link govuk-!-margin-top-0 govuk-!-margin-bottom-6" %>
 
+<% if notice.present? %>
+  <p class="notification govuk-!-margin-bottom-9" role="group" aria-labelledby="notice-heading">
+    <%= notice %>
+  </p>
+<% end %>
+
+<% if alert.present? %>
+  <p class="alert govuk-!-margin-bottom-9" role="group" aria-labelledby="error-summary-heading">
+    <%= alert %>
+  </p>
+<% end %>
+
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
 
 <%= render 'shared/basic_prisoner_info' %>
@@ -8,7 +20,7 @@
 
 <%= render 'allocations/case_information' %>
 
-<%= render 'prisoners/community_information' %>
+<%= render partial: 'shared/community_information', locals: { editable: true } %>
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible" />
 
