--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -8,9 +8,4 @@
 <h2 class="govuk-!-margin-bottom-0 govuk-heading-m"><%= @prisoner.full_name %> (<%= format_date(@prisoner.date_of_birth) %>)</h2>
 <h2 class="govuk-heading-m"><%= @prisoner.offender_no %></h2>
 
-<p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
-
-<%= render :partial => "form", :locals => {
-      :action => prison_case_information_index_path(@prison.code),
-      :method => :post,
-      :save_text => "Save" } %>
+<%= render 'last_known_location', form_method: :post %>
