--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -64,7 +64,7 @@
           <%= allocation.tier %>
         </td>
         <td aria-label="Arrival date" class="govuk-table__cell"><%= format_date(allocation.sentence_start_date) %></td>
-        <td aria-label="Release date" class="govuk-table__cell"><%= format_date(allocation.earliest_release_date) %></td>
+        <td aria-label="Earliest release date" class="govuk-table__cell"><%= format_date(allocation.earliest_release_date) %></td>
         <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
         <td aria-label="Role" class="govuk-table__cell "><%= allocation.pom_responsibility %></td>
         <td aria-label="Action" class="govuk-table__cell ">
