--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -46,7 +46,7 @@
             <%= offender.offender_no %>
           </span>
         </td>
-        <td aria-label="Release date" class="govuk-table__cell">
+        <td aria-label="Earliest release date" class="govuk-table__cell">
           <%= format_date(offender.earliest_release_date) %>
         </td>
         <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name %></td>
