--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -15,9 +15,9 @@
       </td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Release date</td>
+      <td class="govuk-table__cell">Sentence start date</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.release_date, replacement: 'N/A') %>
+        <%= format_date(@prisoner.sentence_start_date, replacement: 'N/A') %>
       </td>
     </tr>
     <tr class="govuk-table__row">
