--- a/app/views/prisoners/_allocation_info.html.erb
+++ b/app/views/prisoners/_allocation_info.html.erb
@@ -1,6 +1,6 @@
 <tr class="govuk-table__row">
   <td class="govuk-table__cell">POM</td>
-  <td class="govuk-table__cell table_cell__left_align">
+  <td class="govuk-table__cell table_cell__left_align" id="primary_pom_name">
     <%= @primary_pom_name %>
   </td>
 </tr>
