Refactor earliest release date
* Added spec to cover the newly added 'Unknown' tag
* Updated prisoner info page to add 'Unknown' tag alternative if
earliest release date is nil
* Refactored earliest_release_date method re: parsing of dates to be
clearer

--- a/app/views/prisoners/show.html.erb
+++ b/app/views/prisoners/show.html.erb
@@ -31,7 +31,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-third">
         <span class="govuk-body">Earliest release date</span>
-        <h3 class="govuk-heading-m"><%= format_date(@prisoner.earliest_release_date) %></h3>
+        <h3 class="govuk-heading-m" id="earliest_release_date"><%= format_date(@prisoner.earliest_release_date, replacement: "Unknown") %></h3>
       </div>
       <div class="govuk-grid-column-one-third">
         <span class="govuk-body">Category</span>
