--- a/app/views/case_information/missing_info.html.erb
+++ b/app/views/case_information/missing_info.html.erb
@@ -64,34 +64,26 @@
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">Select the prisoner's Team</h1>
       </legend>
-      <span class="govuk-hint">
-        Enter the full name of the Team, for example 'NPS Croydon'
-      </span>
+      <span class="govuk-hint">Enter the full name of the Team, for example 'NPS Croydon'</span>
 
-      <div id="search-field" class="govuk-form-group">
-        <div class="govuk-grid-column-one-half">
-          <div class="govuk-grid-row">
-            <%= form.select(:team_id, Team.all.collect { |team| [team.name, team.id]}, {include_blank: true}, class: "govuk-select") %>
-          </div>
-          <!--          <div class="govuk-grid-row govuk-!-margin-top-6">-->
-          <!--            <h2 class="govuk-heading-m">The following Team has been selected:</h2>-->
-          <!--          </div>-->
-        </div>
-      </div>
+      <div id="team_autocomplete" class="autocomplete-wrapper govuk-input--width-30"></div>
+
+           <!-- Get a list of the Team names for use by auto-complete -->
+      <%= content_tag :div, class: "team_information", data: {team: Team.all.pluck(:name)} do %><% end %>
     </div>
 
-    <!--    <table class="govuk-table">-->
-    <!--      <tbody class="govuk-table__body">-->
-    <!--        <tr class="govuk-table__row">-->
-    <!--          <th class="govuk-table__cell govuk-body" scope="row">-->
-    <!--            <h3 class="govuk-body proceeding-item"><strong>NPS Lambeth</strong></h3>-->
-    <!--          </th>-->
-    <!--          <td class="govuk-table__cell govuk-table__cell--numeric">-->
-    <!--            <a href="search">Remove <span class="govuk-visually-hidden">blank</span></a>-->
-    <!--          </td>-->
-    <!--        </tr>-->
-    <!--      </tbody>-->
-    <!--    </table>-->
+    <table class="govuk-table">
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <th class="govuk-table__cell govuk-body" scope="row">
+            <h3 class="govuk-body proceeding-item" id="chosen_team"></h3>
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric">
+            <span id="remove_team" onclick="remove_team()">Remove</span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
