Add columns to the 'Handover cases' page
I've added the required columns to the data table shown on the 'Handover cases' page. These were specified in the ticket related to this work (POM-556).

Note that I haven't yet tested or implemented table sorting functionality – but the sort links are included in the column headings nonetheless.

--- a/app/views/summary/handovers.html.erb
+++ b/app/views/summary/handovers.html.erb
@@ -48,16 +48,13 @@
         <%= sort_arrow('responsibility_handover_date') %>
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
-        <a href="<%= sort_link('responsibility_handover_date') %>">
+        <a href="<%= sort_link('allocated_pom_name') %>">
           POM
         </a>
-        <%= sort_arrow('responsibility_handover_date') %>
+        <%= sort_arrow('allocated_pom_name') %>
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
-        <a href="<%= sort_link('responsibility_handover_date') %>">
-          Service provider
-        </a>
-        <%= sort_arrow('responsibility_handover_date') %>
+        Service provider
       </th>
     </tr>
     </thead>
@@ -71,11 +68,20 @@
             <%= offender.offender_no %>
           </span>
         </td>
-        <td aria-label="Arrival date" class="govuk-table__cell">
-          <%= format_date(offender.prison_arrival_date) %>
-        </td>
         <td aria-label="Earliest release date" class="govuk-table__cell">
           <%= format_date(offender.earliest_release_date, replacement: "Unknown") %>
+        </td>
+        <td aria-label="Handover start date" class="govuk-table__cell">
+          <%= format_date(offender.handover_start_date, replacement: "Unknown") %>
+        </td>
+        <td aria-label="Responsibility changes" class="govuk-table__cell">
+          <%= format_date(offender.responsibility_handover_date, replacement: "Unknown") %>
+        </td>
+        <td aria-label="POM" class="govuk-table__cell">
+          <%= offender.allocated_pom_name || "Not allocated" %>
+        </td>
+        <td aria-label="Service provider" class="govuk-table__cell">
+          <%= service_provider_label(offender.case_allocation) %>
         </td>
       </tr>
     <% end %>
