Change columns on the 'Handover cases' page
Following a conversation within the team, we've decided to remove the 'Earliest release date' column from this page as it is not entirely useful in this view. Instead, we've added a column to show the assigned COM for an offender.

The assigned COM name is not (currently) available in the dataset provided to this view, so for now I've put a 'TODO' placeholder in this column.

--- a/app/views/summary/handovers.html.erb
+++ b/app/views/summary/handovers.html.erb
@@ -30,12 +30,6 @@
         <%= sort_arrow('last_name') %>
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
-        <a href="<%= sort_link('earliest_release_date') %>">
-          Earliest release date
-        </a>
-        <%= sort_arrow('earliest_release_date') %>
-      </th>
-      <th class="govuk-table__header sorter-false" xscope="col">
         <a href="<%= sort_link('handover_start_date') %>">
           Handover start date
         </a>
@@ -54,6 +48,12 @@
         <%= sort_arrow('allocated_pom_name') %>
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
+        <a href="<%= sort_link('allocated_com_name') %>">
+          COM
+        </a>
+        <%= sort_arrow('allocated_com_name') %>
+      </th>
+      <th class="govuk-table__header sorter-false" xscope="col">
         Service provider
       </th>
     </tr>
@@ -68,9 +68,6 @@
             <%= offender.offender_no %>
           </span>
         </td>
-        <td aria-label="Earliest release date" class="govuk-table__cell">
-          <%= format_date(offender.earliest_release_date, replacement: "Unknown") %>
-        </td>
         <td aria-label="Handover start date" class="govuk-table__cell">
           <%= format_date(offender.handover_start_date, replacement: "Unknown") %>
         </td>
@@ -79,6 +76,9 @@
         </td>
         <td aria-label="POM" class="govuk-table__cell">
           <%= offender.allocated_pom_name || "Not allocated" %>
+        </td>
+        <td aria-label="COM" class="govuk-table__cell">
+          TODO
         </td>
         <td aria-label="Service provider" class="govuk-table__cell">
           <%= service_provider_label(offender.case_allocation) %>
