Show allocated COM name on 'Handover cases' page
If allocated, the COM name is shown on the 'Handover cases' page for each offender.

To achieve this, I've had to add a new custom attribute to both the `OffenderBase` model and the `OffenderPresenter` presenter objects. I'm not entirely sure how I feel about this as a global change, since this field is only needed on one view within the application – it certainly feels like there could be a better way to do this.

--- a/app/views/summary/handovers.html.erb
+++ b/app/views/summary/handovers.html.erb
@@ -78,7 +78,7 @@
           <%= offender.allocated_pom_name || "Not allocated" %>
         </td>
         <td aria-label="COM" class="govuk-table__cell">
-          TODO
+          <%= offender.allocated_com_name || "Not allocated" %>
         </td>
         <td aria-label="Service provider" class="govuk-table__cell">
           <%= service_provider_label(offender.case_allocation) %>
