Change sortable columns
I've removed POM and COM names from the list of sortable columns, due to errors sorting collections by fields which might be `nil`.
I've also made 'Service provider' sortable.

--- a/app/views/summary/handovers.html.erb
+++ b/app/views/summary/handovers.html.erb
@@ -42,19 +42,16 @@
         <%= sort_arrow('responsibility_handover_date') %>
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
-        <a href="<%= sort_link('allocated_pom_name') %>">
-          POM
-        </a>
-        <%= sort_arrow('allocated_pom_name') %>
+        POM
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
-        <a href="<%= sort_link('allocated_com_name') %>">
-          COM
-        </a>
-        <%= sort_arrow('allocated_com_name') %>
+        COM
       </th>
       <th class="govuk-table__header sorter-false" xscope="col">
-        Service provider
+        <a href="<%= sort_link('case_allocation') %>">
+          Service provider
+        </a>
+        <%= sort_arrow('case_allocation') %>
       </th>
     </tr>
     </thead>
