--- a/app/views/summary/handovers.html.erb
+++ b/app/views/summary/handovers.html.erb
@@ -8,10 +8,8 @@
 
 <%= render(:partial => 'summary_subnav', :locals => {:active => :handovers}) %>
 
-<h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Handover cases</h1>
-<p>
-  All cases that are within the handover period or start the handover process to the community in the next 30 days.
-</p>
+<h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Case handover status</h1>
+<p>Cases where responsibility is being handed over (or is within 30 days of handover) to the community probation team.</p>
 
 <section id="awaiting-allocation">
   <%= render(
