--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -63,6 +63,18 @@
         <% end %>
       </td>
     </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Post recall release date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.post_recall_release_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Sentence/license end date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.licence_expiry_date, replacement: 'N/A') %>
+      </td>
+    </tr>
   </tbody>
 </table>
 
