Fix spelling error

--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -70,7 +70,7 @@
       </td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Sentence/license end date</td>
+      <td class="govuk-table__cell">Sentence/licence end date</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= format_date(@prisoner.licence_expiry_date, replacement: 'N/A') %>
       </td>
