POM-714 display no tier cases on POM list screens

--- a/app/views/allocations/edit.html.erb
+++ b/app/views/allocations/edit.html.erb
@@ -4,12 +4,12 @@
 
 <%= render 'shared/basic_prisoner_info' %>
 
-<%= render 'allocations/pom_info' %>
+<%= render 'pom_info' %>
 
 <%= render partial: 'shared/offence_info', locals: { editable_prd: true} %>
 
-<%= render 'allocations/case_information' %>
+<%= render 'case_information' %>
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible"/>
 
-<%= render 'allocations/pom_tables_reallocate' %>
+<%= render 'pom_tables_reallocate' %>
