--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -15,6 +15,7 @@ time left to serve into account.</p>
     <th class="govuk-table__header" scope="col">Tier B<br/>cases</th>
     <th class="govuk-table__header" scope="col">Tier C<br/>cases</th>
     <th class="govuk-table__header" scope="col">Tier D<br/>cases</th>
+    <th class="govuk-table__header" scope="col">No Tier<br/>cases</th>
     <th class="govuk-table__header" scope="col">Total</th>
     <th class="govuk-table__header" scope="col">Working<br/>pattern</th>
     <th class="govuk-table__header" scope="col">Action</th>
@@ -31,6 +32,7 @@ time left to serve into account.</p>
       <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
       <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
       <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
+      <td aria-label="No tier cases" class="govuk-table__cell "><%= pom.no_tier %></td>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= working_pattern_name(pom.working_pattern) %></td>
       <td aria-label="Action" class="govuk-table__cell table_cell__left_align">
@@ -64,6 +66,7 @@ time left to serve into account.</p>
         <th class="govuk-table__header" scope="col">Tier B<br/>cases</th>
         <th class="govuk-table__header" scope="col">Tier C<br/>cases</th>
         <th class="govuk-table__header" scope="col">Tier D<br/>cases</th>
+        <th class="govuk-table__header" scope="col">No tier<br/>cases</th>
         <th class="govuk-table__header" scope="col">Total</th>
         <th class="govuk-table__header" scope="col">Working<br/>pattern</th>
         <th class="govuk-table__header" scope="col">Action</th>
@@ -80,6 +83,7 @@ time left to serve into account.</p>
           <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
           <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
           <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
+          <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.no_tier %></td>
           <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
           <td aria-label="Working pattern" class="govuk-table__cell"><%= working_pattern_name(pom.working_pattern) %></td>
           <td aria-label="Action" class="govuk-table__cell table_cell__right_align">
