--- a/app/views/allocations/new.html.erb
+++ b/app/views/allocations/new.html.erb
@@ -6,10 +6,10 @@
 
 <%= render partial: 'shared/offence_info', locals: { editable_prd: true }  %>
 
-<%= render 'allocations/case_information' %>
+<%= render 'case_information' %>
 
 <%= render 'prisoners/community_information' %>
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible" />
 
-<%= render 'allocations/pom_tables' %>
+<%= render 'pom_tables' %>
