--- a/app/views/poms/_active.html.erb
+++ b/app/views/poms/_active.html.erb
@@ -1,7 +1,7 @@
 <section class="govuk-tabs__panel" id="active">
   <h2 class="govuk-heading-m">Probation POM</h2>
-  <%= render :partial => "probation_poms_table", locals: { poms: @active_poms } %>
+  <%= render :partial => "poms_table", locals: { poms: @active_poms.select(&:probation_officer?), pom_type: 'probation' } %>
 
   <h2 class="govuk-heading-m">Prison POM</h2>
-  <%= render :partial => "prison_poms_table", locals: { poms: @active_poms } %>
+  <%= render :partial => "poms_table", locals: { poms: @active_poms.select(&:prison_officer?), pom_type: 'prison' } %>
 </section>
