--- a/app/views/poms/_poms_table.html.erb
+++ b/app/views/poms/_poms_table.html.erb
@@ -6,6 +6,7 @@
     <th class="govuk-table__header" scope="col">Tier B<br/>cases</th>
     <th class="govuk-table__header" scope="col">Tier C<br/>cases</th>
     <th class="govuk-table__header" scope="col">Tier D<br/>cases</th>
+    <th class="govuk-table__header" scope="col">No tier<br/>cases</th>
     <th class="govuk-table__header" scope="col">Total</th>
     <th class="govuk-table__header header-width__8" scope="col">Working<br/>pattern</th>
     <th class="govuk-table__header" scope="col">Status</th>
@@ -13,13 +14,14 @@
   </tr>
   </thead>
   <tbody class="govuk-table__body">
-  <% poms.select(&:probation_officer?).each_with_index do |pom, i| %>
-    <tr class="govuk-table__row probation_pom_row_<%= i %>">
+  <% poms.each_with_index do |pom, i| %>
+    <tr class="govuk-table__row <%= pom_type %>_pom_row_<%= i %>">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
       <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
       <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
       <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
       <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
+      <td aria-label="No tier cases" class="govuk-table__cell "><%= pom.no_tier %></td>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= format_working_pattern(pom.working_pattern) %></td>
       <td aria-label="Status" class="govuk-table__cell "><%= pom.status.capitalize %></td>
