Add data fields to debugging page
This commit creates a new spec/views for the debugging page. It creates tests for established code: prisoner’s full name and tariff-date, to ensure the test data is set up correctly. It then tests for post_recall_release_date and license_expiry_date - to display on this page. Nokogiri has been used to help make these tests more precise. These two new fields have now been added inside the debugging view.

--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -23,7 +23,7 @@
   </p>
   <% else %>
 
-<div class="govuk-!-margin-top-1">
+<div class="govuk-!-margin-top-1" id="prisoner-information">
   <table class="govuk-table">
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
@@ -122,7 +122,7 @@
     </tbody>
   </table>
 
-  <table class="govuk-table">
+  <table class="govuk-table" id="sentence-information">
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__header govuk-!-width-one-half" scope="row">Sentence information</td>
@@ -188,6 +188,18 @@
       <td class="govuk-table__cell">Tariff date</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= format_date(@offender.tariff_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row" id="post-recall-release-date">
+      <td class="govuk-table__cell">Post recall release date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@offender.post_recall_release_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row" id="licence-expiry-date">
+      <td class="govuk-table__cell">Sentence/ license end date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@offender.licence_expiry_date, replacement: 'N/A') %>
       </td>
     </tr>
     </tbody>
