--- a/app/views/layouts/_prison_switcher.html.erb
+++ b/app/views/layouts/_prison_switcher.html.erb
@@ -1,4 +1,4 @@
-<% if show_prison_switcher?(caseloads) %>
+<% if show_prison_switcher?(@caseloads) %>
   <div class="govuk-phase-banner govuk-width-container app-site-
   width-container govuk-!-padding-bottom-0 prison-switcher">
       <h2 class="govuk-heading-m govuk-!-margin-0 govuk-!-padding-0">
