POM-511 introduce form objects to tidy up case_information_controller

--- a/app/views/case_information/missing_info.html.erb
+++ b/app/views/case_information/missing_info.html.erb
@@ -11,8 +11,7 @@
 
 <%= form_for(@case_info, url: prison_case_information_index_path(@prison.code), method: :post) do |form| %>
   <%= form.hidden_field(:nomis_offender_id, value: @prisoner.offender_no) %>
-  <%= form.hidden_field(:last_known_location, value: params.dig(:case_information, :last_known_location)) %>
-  <%= form.hidden_field(:probation_service, value: params.dig(:case_information, :probation_service)) %>
+  <%= form.hidden_field(:probation_service, value: @case_info.probation_service) %>
   <%= hidden_field_tag("sort", params[:sort])%>
   <%= hidden_field_tag("page", params[:page]) %>
   <%= hidden_field_tag("stage", 'missing_info') %>
@@ -26,11 +25,11 @@
       <div class="govuk-radios" data-module="govuk-radios">
         <div class="govuk-radios__item">
           <%= form.radio_button(:case_allocation, 'NPS', class: "govuk-radios__input") %>
-          <%= form.label :case_allocation, 'National Probation Service (NPS)', class: "govuk-label govuk-radios__label" %>
+          <%= form.label :case_allocation, 'National Probation Service (NPS)', value: 'NPS', class: "govuk-label govuk-radios__label" %>
         </div>
         <div class="govuk-radios__item">
           <%= form.radio_button(:case_allocation, 'CRC', class: "govuk-radios__input") %>
-          <%= form.label :case_allocation, 'Community Rehabilitation Company (CRC)', class: "govuk-label govuk-radios__label" %>
+          <%= form.label :case_allocation, 'Community Rehabilitation Company (CRC)', value: 'CRC', class: "govuk-label govuk-radios__label" %>
         </div>
       </div>
     </div>
@@ -43,19 +42,19 @@
       <div class="govuk-radios" data-module="govuk-radios">
         <div class="govuk-radios__item">
           <%= form.radio_button(:tier, 'A', class: "govuk-radios__input") %>
-          <%= form.label :tier, 'A', class: "govuk-label govuk-radios__label" %>
+          <%= form.label :tier, 'A', value: 'A', class: "govuk-label govuk-radios__label" %>
         </div>
         <div class="govuk-radios__item">
           <%= form.radio_button(:tier, 'B', class: "govuk-radios__input") %>
-          <%= form.label :tier, 'B', class: "govuk-label govuk-radios__label" %>
+          <%= form.label :tier, 'B', value: 'B', class: "govuk-label govuk-radios__label" %>
         </div>
         <div class="govuk-radios__item">
           <%= form.radio_button(:tier, 'C', class: "govuk-radios__input") %>
-          <%= form.label :tier, 'C', class: "govuk-label govuk-radios__label" %>
+          <%= form.label :tier, 'C', value: 'C', class: "govuk-label govuk-radios__label" %>
         </div>
         <div class="govuk-radios__item">
           <%= form.radio_button(:tier, 'D', class: "govuk-radios__input") %>
-          <%= form.label :tier, 'D', class: "govuk-label govuk-radios__label" %>
+          <%= form.label :tier, 'D', value: 'D', class: "govuk-label govuk-radios__label" %>
         </div>
       </div>
     </div>
