--- a/app/views/case_information/_form.html.erb
+++ b/app/views/case_information/_form.html.erb
@@ -1,6 +1,4 @@
-
-<%= form_for(@case_info, url: prison_case_information_path(@prison.code), method: :put, id: "case_info_form") do |form| %>
-  <%= form.hidden_field(:nomis_offender_id, value: @prisoner.offender_no) %>
+<%= form_for(@edit_case_info, url: prison_case_information_path(@prison.code), method: :put, id: "case_info_form") do |form| %>
   <%= hidden_field_tag("sort", params[:sort])%>
   <%= hidden_field_tag("page", params[:page]) %>
 
@@ -12,8 +10,8 @@
     <div class="govuk-form-group">
       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <%= form.radio_button(:last_known_location, 'Yes', checked: @case_info.last_known_location == 'Yes', class: "govuk-radios__input", id:'last_known_location_yes', data: { aria_controls: "conditional-last_known_location_yes", aria_expanded: "true"} ) %>
-          <%= form.label :last_known_location, 'Yes', class: "govuk-label govuk-radios__label" %>
+          <%= form.radio_button(:last_known_location, 'Yes', class: "govuk-radios__input", data: { aria_controls: "conditional-last_known_location_yes", aria_expanded: "true"} ) %>
+          <%= form.label :last_known_location, 'Yes', value: 'Yes', class: "govuk-label govuk-radios__label" %>
         </div>
 
         <div class="govuk-radios__conditional" id="conditional-last_known_location_yes">
@@ -24,23 +22,23 @@
 
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <%= form.radio_button(:probation_service, 'Scotland', checked: @case_info.probation_service == 'Scotland', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "hide_element()" ) %>
-                <%= form.label :probation_service, 'Scotland', class: "govuk-label govuk-radios__label" %>
+                <%= form.radio_button(:last_known_address, 'Scotland', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "hide_element()" ) %>
+                <%= form.label :last_known_address, 'Scotland', value: 'Scotland', class: "govuk-label govuk-radios__label" %>
               </div>
               <div class="govuk-radios__item">
-                <%= form.radio_button(:probation_service, 'Northern Ireland', checked: @case_info.probation_service == 'Northern Ireland', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "hide_element()" ) %>
-                <%= form.label :probation_service, 'Northern Ireland', class: "govuk-label govuk-radios__label" %>
+                <%= form.radio_button(:last_known_address, 'Northern Ireland', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "hide_element()" ) %>
+                <%= form.label :last_known_address, 'Northern Ireland', value: 'Northern Ireland', class: "govuk-label govuk-radios__label" %>
               </div>
               <div class="govuk-radios__item">
-                <%= form.radio_button(:probation_service, 'Wales', checked: @case_info.probation_service == 'Wales', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "show_element()" ) %>
-                <%= form.label :probation_service, 'Wales', class: "govuk-label govuk-radios__label" %>
+                <%= form.radio_button(:last_known_address, 'Wales', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "show_element()" ) %>
+                <%= form.label :last_known_address, 'Wales', value: 'Wales', class: "govuk-label govuk-radios__label" %>
               </div>
             </div>
           </div>
         </div>
 
         <div class="govuk-radios__item">
-          <%= form.radio_button(:last_known_location, 'No', checked: @case_info.last_known_location == 'No', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "show_element()" ) %>
+          <%= form.radio_button(:last_known_location, 'No', checked: @edit_case_info.last_known_location == 'No', class: "govuk-radios__input", data: {behavior: "last-location"}, onclick: "show_element()" ) %>
           <%= form.label :last_known_location, 'No', class: "govuk-label govuk-radios__label" %>
         </div>
       </div>
@@ -54,12 +52,12 @@
 
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
-            <%= form.radio_button(:case_allocation, 'NPS', checked: @case_info.case_allocation == 'NPS', class: "govuk-radios__input") %>
-            <%= form.label :case_allocation, 'National Probation Service (NPS)', class: "govuk-label govuk-radios__label" %>
+            <%= form.radio_button(:case_allocation, 'NPS', class: "govuk-radios__input") %>
+            <%= form.label :case_allocation, 'National Probation Service (NPS)', value: 'NPS', class: "govuk-label govuk-radios__label" %>
           </div>
           <div class="govuk-radios__item">
-            <%= form.radio_button(:case_allocation, 'CRC', checked: @case_info.case_allocation == 'CRC', class: "govuk-radios__input") %>
-            <%= form.label :case_allocation, 'Community Rehabilitation Company (CRC)', class: "govuk-label govuk-radios__label" %>
+            <%= form.radio_button(:case_allocation, 'CRC', class: "govuk-radios__input") %>
+            <%= form.label :case_allocation, 'Community Rehabilitation Company (CRC)', value: 'CRC', class: "govuk-label govuk-radios__label" %>
           </div>
         </div>
       </div>
@@ -71,20 +69,20 @@
 
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
-            <%= form.radio_button(:tier, 'A', checked: @case_info.tier == 'A', class: "govuk-radios__input") %>
-            <%= form.label :tier, 'A', class: "govuk-label govuk-radios__label" %>
+            <%= form.radio_button(:tier, 'A', class: "govuk-radios__input") %>
+            <%= form.label :tier, 'A', value: 'A', class: "govuk-label govuk-radios__label" %>
           </div>
           <div class="govuk-radios__item">
-            <%= form.radio_button(:tier, 'B', checked: @case_info.tier == 'B', class: "govuk-radios__input") %>
-            <%= form.label :tier, 'B', class: "govuk-label govuk-radios__label" %>
+            <%= form.radio_button(:tier, 'B', class: "govuk-radios__input") %>
+            <%= form.label :tier, 'B', value: 'B', class: "govuk-label govuk-radios__label" %>
           </div>
           <div class="govuk-radios__item">
-            <%= form.radio_button(:tier, 'C', checked: @case_info.tier == 'C', class: "govuk-radios__input") %>
-            <%= form.label :tier, 'C', class: "govuk-label govuk-radios__label" %>
+            <%= form.radio_button(:tier, 'C', class: "govuk-radios__input") %>
+            <%= form.label :tier, 'C', value: 'C', class: "govuk-label govuk-radios__label" %>
           </div>
           <div class="govuk-radios__item">
-            <%= form.radio_button(:tier, 'D', checked: @case_info.tier == 'D', class: "govuk-radios__input") %>
-            <%= form.label :tier, 'D', class: "govuk-label govuk-radios__label" %>
+            <%= form.radio_button(:tier, 'D', class: "govuk-radios__input") %>
+            <%= form.label :tier, 'D', value: 'D', class: "govuk-label govuk-radios__label" %>
           </div>
         </div>
       </div>
