POM-511 govuk autocomplete module via NPM/YARN

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
  *= require_self
  */
 
-@import "accessible-autocomplete";
+@import "autocomplete";
 @import "tables";
 @import "pagination";
 @import "case_info";
