--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/case_type_badge', offender: @prisoner %>
+
 <div class="govuk-!-margin-top-1">
   <table class="govuk-table">
     <tbody class="govuk-table__body">
