--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -52,7 +52,7 @@
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Parole Review date</td>
-      <td class="govuk-table__cell table_cell__left_align">
+      <td id="parole-review-date", class="govuk-table__cell table_cell__left_align">
         <% if @prisoner.indeterminate_sentence? %>
           <%= format_date(@prisoner.parole_review_date, replacement: 'Unknown') %>
           <% if editable_prd %>
@@ -77,4 +77,3 @@
     </tr>
   </tbody>
 </table>
-
